css/styles.css
/* global */
body {
    height: 1000px;
    background-color: #ebbab9;
}

* {
    font-family: 'Vesper Libre', serif;
}

h1, h2 {
    font-family: 'Viaoda Libre', cursive;
}

/* navbar */
.navbar {
    background-color: #407076;
}

.navbar-toggler {
    border: solid 1px;
}

.navbar-toggler:hover {
    background-color: #FDE8E9;
}

footer {
    height: 5%;
    border: solid 1px grey;
    background-color: #407076;
}

/* index */
.jumbotron {
    height: 75%;
    background-image: url(../images/salon-hero.jpg);
    background-size:cover;
    background-repeat: no-repeat;
    color: #ebbab9;
    text-shadow: -2px 2px 8px #407076;
}

.about-box {
    height: 30%;
    background-color: #698996;
}

.about-anchor{
    color: inherit;
}

.about-anchor:hover {
    color: #ebbab9;
}

/* pricing-contact */
.card-body {
    height: 22rem;
}

.pricing-box {
    height: 50%;
    background-color: #698996;
}

.list-group-item {
    background-color: inherit;
}

.pricing {
    color: #FDE8E9;
}

.form-button {
    background-color: #FDE8E9;
}

.card {
    background-color: #698996;
}

.card-title {
    font-family: 'Viaoda Libre', cursive;
}

.form-text {
    font-family: 'Viaoda Libre', cursive;
    
}



/* gallery */
.carousel-image {
    height: 40rem;
}

/* font families
font-family: 'Vesper Libre', serif;
font-family: 'Viaoda Libre', cursive; */


/* colors
#698996 green
#407076other green
#ebbab9 pink 
#c9c5ba beige*/

